# shopee_scrap_orders

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml
