[project]
name = "scrap-orders"
version = "0.1.0"
description = ""
authors = [
    {name = "wilsonbrasilplauforever@gmail.com",email = "wilsonbrasilplauforever@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "playwright (>=1.56.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "fastapi (>=0.121.3,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
